# mcmeta-parser

./: Cargo.toml  LICENSE  readme.md
src/: lib.rs
