[package]
name = "mcmeta-parser"
description = "Library for adding a struct to parse minecraft java edition resource pack pack.mcmeta file"
authors = ["endernon"]
repository = "https://git.frfrnocap.men/endernon/mcmeta-parser"
readme = "readme.md"
license = "GPL-3"
version = "0.4.0"
edition = "2021"

[dependencies]
serde="1.0.215"